Looked at Q1 in Problem 1

--- a/examproject/exam_2024 msl.ipynb
+++ b/examproject/exam_2024 msl.ipynb
@@ -21,13 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code here\n",
     "import numpy as np\n",
-    "from types import SimpleNamespace"
+    "from types import SimpleNamespace\n",
+    "from scipy import optimize"
    ]
   },
   {
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1_range = np.linspace(0.1, 2, 10)\n",
+    "p2_range = np.linspace(0.1, 2, 10)\n",
+    "\n",
+    "def profits(p, w, par):\n",
+    "    \n",
+    "    # a. solve\n",
+    "    y = lambda l: par.A*l**par.gamma\n",
+    "    obj = lambda l: -(p*y(l) - w*l)\n",
+    "    x0 = [0.5]\n",
+    "    res = optimize.minimize(obj,x0, bounds=((0,None),), method='L-BFGS-B')\n",
+    "\n",
+    "    # b. output\n",
+    "    l_star = (res.x[0])**(1/(1-par.gamma))\n",
+    "    y_star = par.A*y(l_star)**(par.gamma)\n",
+    "    Pi = (1-par.gamma)/(par.gamma)*w*(p*par.A*par.gamma/w)**(1/(1-par.gamma))\n",
+    "\n",
+    "    return Pi, y_star, l_star"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Small test**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p = 0.10, pi = 0.00, y = 0.05, l = 0.00\n",
+      "p = 0.31, pi = 0.02, y = 0.16, l = 0.00\n",
+      "p = 0.52, pi = 0.07, y = 0.26, l = 0.00\n",
+      "p = 0.73, pi = 0.13, y = 0.37, l = 0.02\n",
+      "p = 0.94, pi = 0.22, y = 0.47, l = 0.05\n",
+      "p = 1.16, pi = 0.33, y = 0.58, l = 0.11\n",
+      "p = 1.37, pi = 0.47, y = 0.68, l = 0.22\n",
+      "p = 1.58, pi = 0.62, y = 0.79, l = 0.39\n",
+      "p = 1.79, pi = 0.80, y = 0.89, l = 0.64\n",
+      "p = 2.00, pi = 1.00, y = 1.00, l = 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = 1\n",
+    "for p in p1_range:\n",
+    "    pi, y, l = profits(p, w, par)\n",
+    "    print(f'p = {p:.2f}, pi = {pi:.2f}, y = {y:.2f}, l = {l:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def utility(c1,c2,l,par):\n",
+    "    return np.log(c1**par.alpha * c2**(1-par.alpha)) - par.nu*l**(1+par.epsilon)/(1+par.epsilon)\n",
+    "\n",
+    "def consumer(p,w,pi,par):\n",
+    "    # a. solve\n",
+    "    obj = lambda l: -utility(par.alpha*(w*l+par.T+pi)/p,(1-par.alpha)*(w*l+par.T+pi)/(p+par.tau),l,par)\n",
+    "    res = optimize.minimize_scalar(obj, bounds=(0,1), method='bounded')\n",
+    "\n",
+    "    # b. output\n",
+    "    l_star = res.x\n",
+    "    c1_star = par.alpha*(w*l_star+par.T+pi)/p\n",
+    "    c2_star = (1-par.alpha)*(w*l_star+par.T+pi)/(p+par.tau)\n",
+    "\n",
+    "    return c1_star, c2_star, l_star"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Small test**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p = 0.10, c1 = 4.07, c2 = 9.51, l = 0.86\n",
+      "p = 0.31, c1 = 1.31, c2 = 3.06, l = 0.86\n",
+      "p = 0.52, c1 = 0.78, c2 = 1.82, l = 0.86\n",
+      "p = 0.73, c1 = 0.56, c2 = 1.30, l = 0.86\n",
+      "p = 0.94, c1 = 0.43, c2 = 1.01, l = 0.86\n",
+      "p = 1.16, c1 = 0.35, c2 = 0.82, l = 0.86\n",
+      "p = 1.37, c1 = 0.30, c2 = 0.70, l = 0.86\n",
+      "p = 1.58, c1 = 0.26, c2 = 0.60, l = 0.86\n",
+      "p = 1.79, c1 = 0.23, c2 = 0.53, l = 0.86\n",
+      "p = 2.00, c1 = 0.20, c2 = 0.48, l = 0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = 1\n",
+    "pi = 0.5\n",
+    "for p in p1_range:\n",
+    "    c1,c2,l = consumer(p,w,pi,par)\n",
+    "    print(f'p = {p:.2f}, c1 = {c1:.2f}, c2 = {c2:.2f}, l = {l:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -268,15 +389,20 @@
     "    labor_supply = c1 ** par.alpha + c2 ** (1 - par.alpha)\n",
     "    return labor_supply\n",
     "\n",
+    "# def utility(w, p1, p2, par):\n",
+    "#     # Calculate the utility for the households\n",
+    "#     labor = labor_supply(w, p1, p2, par)\n",
+    "#     utility = labor ** par.nu / par.nu - par.epsilon * labor ** (par.nu / (1 - par.nu))\n",
+    "#     return utility\n",
+    "\n",
     "def utility(w, p1, p2, par):\n",
     "    # Calculate the utility for the households\n",
-    "    labor = labor_supply(w, p1, p2, par)\n",
-    "    utility = labor ** par.nu / par.nu - par.epsilon * labor ** (par.nu / (1 - par.nu))\n",
+    "    utility = log(labor_supply)-par.nu*((p1_range*A*par.gamma)/w)**(1/(1-par.gamma))/(1+par.epsilon)\n",
     "    return utility\n",
     "\n",
     "def government_budget(w, p1, p2, par):\n",
     "    # Calculate the government budget\n",
-    "    government_budget = par.tau * (par.kappa * profits(w, p1, p2, par) + (1 - par.kappa) * w * labor_supply(w, p1, p2, par)) - par.T\n",
+    "    government_budget = par.tau * ((par.kappa * profits(w, p1, p2, par) )+ (1 - par.kappa) * w * labor_supply(w, p1, p2, par)) - par.T\n",
     "    return government_budget\n",
     "\n",
     "def market_clearing(w, p1, p2, par):\n",
@@ -291,7 +417,7 @@
     "        excess_demand_1, excess_demand_2 = market_clearing(w, p1, p2, par)\n",
     "        \n",
     "        # Assuming market clears if excess demand is close to 0 for both goods\n",
-    "        if abs(excess_demand_1) < 0.001 and abs(excess_demand_2) < 0.001:\n",
+    "        if abs(excess_demand_1) < 0.01 and abs(excess_demand_2) < 0.01:\n",
     "            print(f\"Market clears for p1 = {p1:.2f}, p2 = {p2:.2f}\")\n",
     "        else:\n",
     "            print(f\"Market does not clear for p1 = {p1:.2f}, p2 = {p2:.2f}\")"
@@ -307,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -369,43 +495,34 @@
      "output_type": "stream",
      "text": [
       "Optimal tau: 0.1\n",
-      "Optimal T: 0.1\n"
+      "Implied optimal T: 0.09000000000000001\n"
      ]
     }
    ],
    "source": [
     "# write your answer here\n",
-    "# Define the function to calculate SWF\n",
-    "def calculate_swf(tau, T):\n",
-    "    # Calculate the social welfare function\n",
-    "    swf = (1 - tau) * (1 - T)\n",
-    "    return swf\n",
-    "\n",
-    "# Define the range of values for tau and T\n",
-    "tau_range = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
-    "T_range = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
-    "\n",
-    "# Initialize variables to store the maximum SWF and corresponding values of tau and T\n",
-    "max_swf = -float('inf')\n",
-    "opt_tau = None\n",
-    "opt_T = None\n",
-    "\n",
-    "# Iterate over the values of tau and T\n",
+    "# Calculate the social welfare function for each combination of tau and T\n",
+    "swf_values = []\n",
     "for tau in tau_range:\n",
     "    for T in T_range:\n",
     "        # Calculate the SWF for the current values of tau and T\n",
     "        swf = calculate_swf(tau, T)\n",
     "        \n",
-    "        # Check if the current SWF is greater than the maximum SWF\n",
-    "        if swf > max_swf:\n",
-    "            # Update the maximum SWF and corresponding values of tau and T\n",
-    "            max_swf = swf\n",
-    "            opt_tau = tau\n",
-    "            opt_T = T\n",
+    "        # Calculate the implied value of T\n",
+    "        implied_T = (1 - tau) * T\n",
+    "        \n",
+    "        # Calculate the SWF with the social cost of carbon\n",
+    "        swf_with_cost = swf - par.kappa * implied_T\n",
+    "        \n",
+    "        # Append the SWF value to the list\n",
+    "        swf_values.append((swf_with_cost, tau, implied_T))\n",
+    "        \n",
+    "# Find the maximum SWF value and corresponding values of tau and implied T\n",
+    "max_swf_with_cost, opt_tau, opt_implied_T = max(swf_values)\n",
     "\n",
-    "# Print the optimal values of tau and T\n",
+    "# Print the optimal values of tau and implied T\n",
     "print(\"Optimal tau:\", opt_tau)\n",
-    "print(\"Optimal T:\", opt_T)"
+    "print(\"Implied optimal T:\", opt_implied_T)"
    ]
   },
   {
@@ -454,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
