Updated Q1 and Q2 in P1

--- a/examproject/exam_2024 msl.ipynb
+++ b/examproject/exam_2024 msl.ipynb
@@ -262,168 +262,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Market does not clear for p1 = 0.10, p2 = 0.10\n",
-      "Market does not clear for p1 = 0.10, p2 = 0.31\n",
-      "Market does not clear for p1 = 0.10, p2 = 0.52\n",
-      "Market does not clear for p1 = 0.10, p2 = 0.73\n",
-      "Market does not clear for p1 = 0.10, p2 = 0.94\n",
-      "Market does not clear for p1 = 0.10, p2 = 1.16\n",
-      "Market does not clear for p1 = 0.10, p2 = 1.37\n",
-      "Market does not clear for p1 = 0.10, p2 = 1.58\n",
-      "Market does not clear for p1 = 0.10, p2 = 1.79\n",
-      "Market does not clear for p1 = 0.10, p2 = 2.00\n",
-      "Market does not clear for p1 = 0.31, p2 = 0.10\n",
-      "Market does not clear for p1 = 0.31, p2 = 0.31\n",
-      "Market does not clear for p1 = 0.31, p2 = 0.52\n",
-      "Market does not clear for p1 = 0.31, p2 = 0.73\n",
-      "Market does not clear for p1 = 0.31, p2 = 0.94\n",
-      "Market does not clear for p1 = 0.31, p2 = 1.16\n",
-      "Market does not clear for p1 = 0.31, p2 = 1.37\n",
-      "Market does not clear for p1 = 0.31, p2 = 1.58\n",
-      "Market does not clear for p1 = 0.31, p2 = 1.79\n",
-      "Market does not clear for p1 = 0.31, p2 = 2.00\n",
-      "Market does not clear for p1 = 0.52, p2 = 0.10\n",
-      "Market does not clear for p1 = 0.52, p2 = 0.31\n",
-      "Market does not clear for p1 = 0.52, p2 = 0.52\n",
-      "Market does not clear for p1 = 0.52, p2 = 0.73\n",
-      "Market does not clear for p1 = 0.52, p2 = 0.94\n",
-      "Market does not clear for p1 = 0.52, p2 = 1.16\n",
-      "Market does not clear for p1 = 0.52, p2 = 1.37\n",
-      "Market does not clear for p1 = 0.52, p2 = 1.58\n",
-      "Market does not clear for p1 = 0.52, p2 = 1.79\n",
-      "Market does not clear for p1 = 0.52, p2 = 2.00\n",
-      "Market does not clear for p1 = 0.73, p2 = 0.10\n",
-      "Market does not clear for p1 = 0.73, p2 = 0.31\n",
-      "Market does not clear for p1 = 0.73, p2 = 0.52\n",
-      "Market does not clear for p1 = 0.73, p2 = 0.73\n",
-      "Market does not clear for p1 = 0.73, p2 = 0.94\n",
-      "Market does not clear for p1 = 0.73, p2 = 1.16\n",
-      "Market does not clear for p1 = 0.73, p2 = 1.37\n",
-      "Market does not clear for p1 = 0.73, p2 = 1.58\n",
-      "Market does not clear for p1 = 0.73, p2 = 1.79\n",
-      "Market does not clear for p1 = 0.73, p2 = 2.00\n",
-      "Market does not clear for p1 = 0.94, p2 = 0.10\n",
-      "Market does not clear for p1 = 0.94, p2 = 0.31\n",
-      "Market does not clear for p1 = 0.94, p2 = 0.52\n",
-      "Market does not clear for p1 = 0.94, p2 = 0.73\n",
-      "Market does not clear for p1 = 0.94, p2 = 0.94\n",
-      "Market does not clear for p1 = 0.94, p2 = 1.16\n",
-      "Market does not clear for p1 = 0.94, p2 = 1.37\n",
-      "Market does not clear for p1 = 0.94, p2 = 1.58\n",
-      "Market does not clear for p1 = 0.94, p2 = 1.79\n",
-      "Market does not clear for p1 = 0.94, p2 = 2.00\n",
-      "Market does not clear for p1 = 1.16, p2 = 0.10\n",
-      "Market does not clear for p1 = 1.16, p2 = 0.31\n",
-      "Market does not clear for p1 = 1.16, p2 = 0.52\n",
-      "Market does not clear for p1 = 1.16, p2 = 0.73\n",
-      "Market does not clear for p1 = 1.16, p2 = 0.94\n",
-      "Market does not clear for p1 = 1.16, p2 = 1.16\n",
-      "Market does not clear for p1 = 1.16, p2 = 1.37\n",
-      "Market does not clear for p1 = 1.16, p2 = 1.58\n",
-      "Market does not clear for p1 = 1.16, p2 = 1.79\n",
-      "Market does not clear for p1 = 1.16, p2 = 2.00\n",
-      "Market does not clear for p1 = 1.37, p2 = 0.10\n",
-      "Market does not clear for p1 = 1.37, p2 = 0.31\n",
-      "Market does not clear for p1 = 1.37, p2 = 0.52\n",
-      "Market does not clear for p1 = 1.37, p2 = 0.73\n",
-      "Market does not clear for p1 = 1.37, p2 = 0.94\n",
-      "Market does not clear for p1 = 1.37, p2 = 1.16\n",
-      "Market does not clear for p1 = 1.37, p2 = 1.37\n",
-      "Market does not clear for p1 = 1.37, p2 = 1.58\n",
-      "Market does not clear for p1 = 1.37, p2 = 1.79\n",
-      "Market does not clear for p1 = 1.37, p2 = 2.00\n",
-      "Market does not clear for p1 = 1.58, p2 = 0.10\n",
-      "Market does not clear for p1 = 1.58, p2 = 0.31\n",
-      "Market does not clear for p1 = 1.58, p2 = 0.52\n",
-      "Market does not clear for p1 = 1.58, p2 = 0.73\n",
-      "Market does not clear for p1 = 1.58, p2 = 0.94\n",
-      "Market does not clear for p1 = 1.58, p2 = 1.16\n",
-      "Market does not clear for p1 = 1.58, p2 = 1.37\n",
-      "Market does not clear for p1 = 1.58, p2 = 1.58\n",
-      "Market does not clear for p1 = 1.58, p2 = 1.79\n",
-      "Market does not clear for p1 = 1.58, p2 = 2.00\n",
-      "Market does not clear for p1 = 1.79, p2 = 0.10\n",
-      "Market does not clear for p1 = 1.79, p2 = 0.31\n",
-      "Market does not clear for p1 = 1.79, p2 = 0.52\n",
-      "Market does not clear for p1 = 1.79, p2 = 0.73\n",
-      "Market does not clear for p1 = 1.79, p2 = 0.94\n",
-      "Market does not clear for p1 = 1.79, p2 = 1.16\n",
-      "Market does not clear for p1 = 1.79, p2 = 1.37\n",
-      "Market does not clear for p1 = 1.79, p2 = 1.58\n",
-      "Market does not clear for p1 = 1.79, p2 = 1.79\n",
-      "Market does not clear for p1 = 1.79, p2 = 2.00\n",
-      "Market does not clear for p1 = 2.00, p2 = 0.10\n",
-      "Market does not clear for p1 = 2.00, p2 = 0.31\n",
-      "Market does not clear for p1 = 2.00, p2 = 0.52\n",
-      "Market does not clear for p1 = 2.00, p2 = 0.73\n",
-      "Market does not clear for p1 = 2.00, p2 = 0.94\n",
-      "Market does not clear for p1 = 2.00, p2 = 1.16\n",
-      "Market does not clear for p1 = 2.00, p2 = 1.37\n",
-      "Market does not clear for p1 = 2.00, p2 = 1.58\n",
-      "Market does not clear for p1 = 2.00, p2 = 1.79\n",
-      "Market does not clear for p1 = 2.00, p2 = 2.00\n"
-     ]
-    }
-   ],
-   "source": [
-    "p1_range = np.linspace(0.1, 2, 10)\n",
-    "p2_range = np.linspace(0.1, 2, 10)\n",
-    "\n",
-    "def profits(w, p1, p2, par):\n",
-    "    # Calculate the profits for the firms\n",
-    "    profits = (1-par.gamma)/par.gamma * w * (p1 * par.A / w) ** 1/(1-par.gamma) + (1-par.gamma)/par.gamma * w * (p2 * par.A / w) ** 1/(1-par.gamma)\n",
-    "    return profits\n",
-    "\n",
-    "def labor_supply(w, p1, p2, par):\n",
-    "    # Calculate the labor supply for the households\n",
-    "    c1 = par.alpha * profits(w, p1, p2, par) / p1\n",
-    "    c2 = (1 - par.alpha) * profits(w, p1, p2, par) / (p2+par.tau)\n",
-    "    labor_supply = c1 ** par.alpha + c2 ** (1 - par.alpha)\n",
-    "    return labor_supply\n",
-    "\n",
-    "# def utility(w, p1, p2, par):\n",
-    "#     # Calculate the utility for the households\n",
-    "#     labor = labor_supply(w, p1, p2, par)\n",
-    "#     utility = labor ** par.nu / par.nu - par.epsilon * labor ** (par.nu / (1 - par.nu))\n",
-    "#     return utility\n",
-    "\n",
-    "def utility(w, p1, p2, par):\n",
-    "    # Calculate the utility for the households\n",
-    "    utility = log(labor_supply)-par.nu*((p1_range*A*par.gamma)/w)**(1/(1-par.gamma))/(1+par.epsilon)\n",
-    "    return utility\n",
-    "\n",
-    "def government_budget(w, p1, p2, par):\n",
-    "    # Calculate the government budget\n",
-    "    government_budget = par.tau * ((par.kappa * profits(w, p1, p2, par) )+ (1 - par.kappa) * w * labor_supply(w, p1, p2, par)) - par.T\n",
-    "    return government_budget\n",
-    "\n",
-    "def market_clearing(w, p1, p2, par):\n",
-    "    # Check market clearing conditions\n",
-    "    excess_demand_1 = labor_supply(w, p1, p2, par) - profits(w, p1, p2, par)\n",
-    "    excess_demand_2 = labor_supply(w, p2, p1, par) - profits(w, p2, p1, par)\n",
-    "    return excess_demand_1, excess_demand_2\n",
-    "\n",
-    "# Check market clearing conditions\n",
-    "for p1 in p1_range:\n",
-    "    for p2 in p2_range:\n",
-    "        excess_demand_1, excess_demand_2 = market_clearing(w, p1, p2, par)\n",
-    "        \n",
-    "        # Assuming market clears if excess demand is close to 0 for both goods\n",
-    "        if abs(excess_demand_1) < 0.01 and abs(excess_demand_2) < 0.01:\n",
-    "            print(f\"Market clears for p1 = {p1:.2f}, p2 = {p2:.2f}\")\n",
-    "        else:\n",
-    "            print(f\"Market does not clear for p1 = {p1:.2f}, p2 = {p2:.2f}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -433,31 +271,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def equilibrium(p1,p2,w,par):\n",
+    "    # a. labor demand\n",
+    "    pi1, y1, l1 = profits(p1,w,par)\n",
+    "    pi2, y2, l2 = profits(p2,w,par)\n",
+    "    L = l1 + l2\n",
+    "\n",
+    "    # b. labor supply\n",
+    "    c1, c2, L = consumer(p1,w,pi1,par)\n",
+    "    C = c1 + c2\n",
+    "\n",
+    "    # c. market clearing\n",
+    "    Labor_market_clearing = L - l1 + l2\n",
+    "    Goods_market_clearing_1 = y1 - c1\n",
+    "    Goods_market_clearing_2 = y2 - c2\n",
+    "\n",
+    "    return Labor_market_clearing, Goods_market_clearing_1, Goods_market_clearing_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equilibrium prices: p1 = 0.10, p2 = 0.10\n"
+      "p1 = 0.10, p2 = 0.10 ,LMC: 1.00, GM1C: -2.96 , GM2C: -6.96\n",
+      "p1 = 0.10, p2 = 0.31 ,LMC: 1.00, GM1C: -2.96 , GM2C: -6.86\n",
+      "p1 = 0.10, p2 = 0.52 ,LMC: 1.00, GM1C: -2.96 , GM2C: -6.75\n",
+      "p1 = 0.10, p2 = 0.73 ,LMC: 1.02, GM1C: -2.96 , GM2C: -6.65\n",
+      "p1 = 0.10, p2 = 0.94 ,LMC: 1.05, GM1C: -2.96 , GM2C: -6.54\n",
+      "p1 = 0.10, p2 = 1.16 ,LMC: 1.11, GM1C: -2.96 , GM2C: -6.43\n",
+      "p1 = 0.10, p2 = 1.37 ,LMC: 1.22, GM1C: -2.96 , GM2C: -6.33\n",
+      "p1 = 0.10, p2 = 1.58 ,LMC: 1.39, GM1C: -2.96 , GM2C: -6.22\n",
+      "p1 = 0.10, p2 = 1.79 ,LMC: 1.64, GM1C: -2.96 , GM2C: -6.12\n",
+      "p1 = 0.10, p2 = 2.00 ,LMC: 2.00, GM1C: -2.96 , GM2C: -6.01\n",
+      "p1 = 0.31, p2 = 0.10 ,LMC: 0.99, GM1C: -0.82 , GM2C: -2.24\n",
+      "p1 = 0.31, p2 = 0.31 ,LMC: 0.99, GM1C: -0.82 , GM2C: -2.13\n",
+      "p1 = 0.31, p2 = 0.52 ,LMC: 1.00, GM1C: -0.82 , GM2C: -2.03\n",
+      "p1 = 0.31, p2 = 0.73 ,LMC: 1.01, GM1C: -0.82 , GM2C: -1.92\n",
+      "p1 = 0.31, p2 = 0.94 ,LMC: 1.04, GM1C: -0.82 , GM2C: -1.81\n",
+      "p1 = 0.31, p2 = 1.16 ,LMC: 1.10, GM1C: -0.82 , GM2C: -1.71\n",
+      "p1 = 0.31, p2 = 1.37 ,LMC: 1.21, GM1C: -0.82 , GM2C: -1.60\n",
+      "p1 = 0.31, p2 = 1.58 ,LMC: 1.38, GM1C: -0.82 , GM2C: -1.50\n",
+      "p1 = 0.31, p2 = 1.79 ,LMC: 1.63, GM1C: -0.82 , GM2C: -1.39\n",
+      "p1 = 0.31, p2 = 2.00 ,LMC: 1.99, GM1C: -0.82 , GM2C: -1.29\n",
+      "p1 = 0.52, p2 = 0.10 ,LMC: 0.97, GM1C: -0.34 , GM2C: -1.35\n",
+      "p1 = 0.52, p2 = 0.31 ,LMC: 0.97, GM1C: -0.34 , GM2C: -1.25\n",
+      "p1 = 0.52, p2 = 0.52 ,LMC: 0.98, GM1C: -0.34 , GM2C: -1.14\n",
+      "p1 = 0.52, p2 = 0.73 ,LMC: 0.99, GM1C: -0.34 , GM2C: -1.04\n",
+      "p1 = 0.52, p2 = 0.94 ,LMC: 1.02, GM1C: -0.34 , GM2C: -0.93\n",
+      "p1 = 0.52, p2 = 1.16 ,LMC: 1.08, GM1C: -0.34 , GM2C: -0.82\n",
+      "p1 = 0.52, p2 = 1.37 ,LMC: 1.19, GM1C: -0.34 , GM2C: -0.72\n",
+      "p1 = 0.52, p2 = 1.58 ,LMC: 1.36, GM1C: -0.34 , GM2C: -0.61\n",
+      "p1 = 0.52, p2 = 1.79 ,LMC: 1.61, GM1C: -0.34 , GM2C: -0.51\n",
+      "p1 = 0.52, p2 = 2.00 ,LMC: 1.97, GM1C: -0.34 , GM2C: -0.40\n",
+      "p1 = 0.73, p2 = 0.10 ,LMC: 0.94, GM1C: -0.08 , GM2C: -0.99\n",
+      "p1 = 0.73, p2 = 0.31 ,LMC: 0.94, GM1C: -0.08 , GM2C: -0.89\n",
+      "p1 = 0.73, p2 = 0.52 ,LMC: 0.94, GM1C: -0.08 , GM2C: -0.78\n",
+      "p1 = 0.73, p2 = 0.73 ,LMC: 0.96, GM1C: -0.08 , GM2C: -0.68\n",
+      "p1 = 0.73, p2 = 0.94 ,LMC: 0.99, GM1C: -0.08 , GM2C: -0.57\n",
+      "p1 = 0.73, p2 = 1.16 ,LMC: 1.05, GM1C: -0.08 , GM2C: -0.46\n",
+      "p1 = 0.73, p2 = 1.37 ,LMC: 1.16, GM1C: -0.08 , GM2C: -0.36\n",
+      "p1 = 0.73, p2 = 1.58 ,LMC: 1.33, GM1C: -0.08 , GM2C: -0.25\n",
+      "p1 = 0.73, p2 = 1.79 ,LMC: 1.58, GM1C: -0.08 , GM2C: -0.15\n",
+      "p1 = 0.73, p2 = 2.00 ,LMC: 1.94, GM1C: -0.08 , GM2C: -0.04\n",
+      "p1 = 0.94, p2 = 0.10 ,LMC: 0.88, GM1C: 0.11 , GM2C: -0.81\n",
+      "p1 = 0.94, p2 = 0.31 ,LMC: 0.88, GM1C: 0.11 , GM2C: -0.70\n",
+      "p1 = 0.94, p2 = 0.52 ,LMC: 0.89, GM1C: 0.11 , GM2C: -0.59\n",
+      "p1 = 0.94, p2 = 0.73 ,LMC: 0.90, GM1C: 0.11 , GM2C: -0.49\n",
+      "p1 = 0.94, p2 = 0.94 ,LMC: 0.93, GM1C: 0.11 , GM2C: -0.38\n",
+      "p1 = 0.94, p2 = 1.16 ,LMC: 0.99, GM1C: 0.11 , GM2C: -0.28\n",
+      "p1 = 0.94, p2 = 1.37 ,LMC: 1.10, GM1C: 0.11 , GM2C: -0.17\n",
+      "p1 = 0.94, p2 = 1.58 ,LMC: 1.27, GM1C: 0.11 , GM2C: -0.07\n",
+      "p1 = 0.94, p2 = 1.79 ,LMC: 1.52, GM1C: 0.11 , GM2C: 0.04\n",
+      "p1 = 0.94, p2 = 2.00 ,LMC: 1.88, GM1C: 0.11 , GM2C: 0.14\n",
+      "p1 = 1.16, p2 = 0.10 ,LMC: 0.79, GM1C: 0.26 , GM2C: -0.70\n",
+      "p1 = 1.16, p2 = 0.31 ,LMC: 0.79, GM1C: 0.26 , GM2C: -0.59\n",
+      "p1 = 1.16, p2 = 0.52 ,LMC: 0.79, GM1C: 0.26 , GM2C: -0.49\n",
+      "p1 = 1.16, p2 = 0.73 ,LMC: 0.81, GM1C: 0.26 , GM2C: -0.38\n",
+      "p1 = 1.16, p2 = 0.94 ,LMC: 0.84, GM1C: 0.26 , GM2C: -0.28\n",
+      "p1 = 1.16, p2 = 1.16 ,LMC: 0.90, GM1C: 0.26 , GM2C: -0.17\n",
+      "p1 = 1.16, p2 = 1.37 ,LMC: 1.01, GM1C: 0.26 , GM2C: -0.06\n",
+      "p1 = 1.16, p2 = 1.58 ,LMC: 1.18, GM1C: 0.26 , GM2C: 0.04\n",
+      "p1 = 1.16, p2 = 1.79 ,LMC: 1.43, GM1C: 0.26 , GM2C: 0.15\n",
+      "p1 = 1.16, p2 = 2.00 ,LMC: 1.79, GM1C: 0.26 , GM2C: 0.25\n",
+      "p1 = 1.37, p2 = 0.10 ,LMC: 0.65, GM1C: 0.39 , GM2C: -0.63\n",
+      "p1 = 1.37, p2 = 0.31 ,LMC: 0.65, GM1C: 0.39 , GM2C: -0.53\n",
+      "p1 = 1.37, p2 = 0.52 ,LMC: 0.65, GM1C: 0.39 , GM2C: -0.42\n",
+      "p1 = 1.37, p2 = 0.73 ,LMC: 0.67, GM1C: 0.39 , GM2C: -0.32\n",
+      "p1 = 1.37, p2 = 0.94 ,LMC: 0.70, GM1C: 0.39 , GM2C: -0.21\n",
+      "p1 = 1.37, p2 = 1.16 ,LMC: 0.76, GM1C: 0.39 , GM2C: -0.11\n",
+      "p1 = 1.37, p2 = 1.37 ,LMC: 0.87, GM1C: 0.39 , GM2C: 0.00\n",
+      "p1 = 1.37, p2 = 1.58 ,LMC: 1.04, GM1C: 0.39 , GM2C: 0.11\n",
+      "p1 = 1.37, p2 = 1.79 ,LMC: 1.29, GM1C: 0.39 , GM2C: 0.21\n",
+      "p1 = 1.37, p2 = 2.00 ,LMC: 1.65, GM1C: 0.39 , GM2C: 0.32\n",
+      "p1 = 1.58, p2 = 0.10 ,LMC: 0.44, GM1C: 0.51 , GM2C: -0.59\n",
+      "p1 = 1.58, p2 = 0.31 ,LMC: 0.44, GM1C: 0.51 , GM2C: -0.49\n",
+      "p1 = 1.58, p2 = 0.52 ,LMC: 0.45, GM1C: 0.51 , GM2C: -0.38\n",
+      "p1 = 1.58, p2 = 0.73 ,LMC: 0.46, GM1C: 0.51 , GM2C: -0.28\n",
+      "p1 = 1.58, p2 = 0.94 ,LMC: 0.49, GM1C: 0.51 , GM2C: -0.17\n",
+      "p1 = 1.58, p2 = 1.16 ,LMC: 0.55, GM1C: 0.51 , GM2C: -0.07\n",
+      "p1 = 1.58, p2 = 1.37 ,LMC: 0.66, GM1C: 0.51 , GM2C: 0.04\n",
+      "p1 = 1.58, p2 = 1.58 ,LMC: 0.83, GM1C: 0.51 , GM2C: 0.14\n",
+      "p1 = 1.58, p2 = 1.79 ,LMC: 1.08, GM1C: 0.51 , GM2C: 0.25\n",
+      "p1 = 1.58, p2 = 2.00 ,LMC: 1.44, GM1C: 0.51 , GM2C: 0.36\n",
+      "p1 = 1.79, p2 = 0.10 ,LMC: 0.15, GM1C: 0.63 , GM2C: -0.57\n",
+      "p1 = 1.79, p2 = 0.31 ,LMC: 0.15, GM1C: 0.63 , GM2C: -0.47\n",
+      "p1 = 1.79, p2 = 0.52 ,LMC: 0.16, GM1C: 0.63 , GM2C: -0.36\n",
+      "p1 = 1.79, p2 = 0.73 ,LMC: 0.17, GM1C: 0.63 , GM2C: -0.26\n",
+      "p1 = 1.79, p2 = 0.94 ,LMC: 0.20, GM1C: 0.63 , GM2C: -0.15\n",
+      "p1 = 1.79, p2 = 1.16 ,LMC: 0.26, GM1C: 0.63 , GM2C: -0.05\n",
+      "p1 = 1.79, p2 = 1.37 ,LMC: 0.37, GM1C: 0.63 , GM2C: 0.06\n",
+      "p1 = 1.79, p2 = 1.58 ,LMC: 0.54, GM1C: 0.63 , GM2C: 0.17\n",
+      "p1 = 1.79, p2 = 1.79 ,LMC: 0.79, GM1C: 0.63 , GM2C: 0.27\n",
+      "p1 = 1.79, p2 = 2.00 ,LMC: 1.15, GM1C: 0.63 , GM2C: 0.38\n",
+      "p1 = 2.00, p2 = 0.10 ,LMC: -0.25, GM1C: 0.74 , GM2C: -0.56\n",
+      "p1 = 2.00, p2 = 0.31 ,LMC: -0.24, GM1C: 0.74 , GM2C: -0.46\n",
+      "p1 = 2.00, p2 = 0.52 ,LMC: -0.24, GM1C: 0.74 , GM2C: -0.35\n",
+      "p1 = 2.00, p2 = 0.73 ,LMC: -0.23, GM1C: 0.74 , GM2C: -0.25\n",
+      "p1 = 2.00, p2 = 0.94 ,LMC: -0.20, GM1C: 0.74 , GM2C: -0.14\n",
+      "p1 = 2.00, p2 = 1.16 ,LMC: -0.13, GM1C: 0.74 , GM2C: -0.04\n",
+      "p1 = 2.00, p2 = 1.37 ,LMC: -0.03, GM1C: 0.74 , GM2C: 0.07\n",
+      "p1 = 2.00, p2 = 1.58 ,LMC: 0.14, GM1C: 0.74 , GM2C: 0.17\n",
+      "p1 = 2.00, p2 = 1.79 ,LMC: 0.39, GM1C: 0.74 , GM2C: 0.28\n",
+      "p1 = 2.00, p2 = 2.00 ,LMC: 0.75, GM1C: 0.74 , GM2C: 0.39\n"
      ]
     }
    ],
    "source": [
-    "# write your answer here\n",
-    "# Calculate the excess demand for good 1\n",
-    "excess_demand_1 = labor_supply(w, p1, p2, par) - profits(w, p1, p2, par)\n",
-    "\n",
-    "# Calculate the excess demand for good 2\n",
-    "excess_demand_2 = labor_supply(w, p2, p1, par) - profits(w, p2, p1, par)\n",
-    "\n",
-    "# Solve for equilibrium prices using Walras' law\n",
-    "p1 = p1_range[np.abs(excess_demand_1).argmin()]\n",
-    "p2 = p2_range[np.abs(excess_demand_2).argmin()]\n",
-    "\n",
-    "# Print the equilibrium prices\n",
-    "print(f\"Equilibrium prices: p1 = {p1:.2f}, p2 = {p2:.2f}\")"
+    "w = 1\n",
+    "for p1 in p1_range:\n",
+    "    for p2 in p2_range:\n",
+    "        Labor_market_clearing, Goods_market_clearing_1, Goods_market_clearing_2 = equilibrium(p1,p2,w,par)\n",
+    "        print(f'p1 = {p1:.2f}, p2 = {p2:.2f} ,LMC: {Labor_market_clearing:.2f}, GM1C: {Goods_market_clearing_1:.2f} , GM2C: {Goods_market_clearing_2:.2f}')"
    ]
   },
   {
