Work on Q2 in P1

--- a/examproject/exam_2024 msl.ipynb
+++ b/examproject/exam_2024 msl.ipynb
@@ -414,6 +414,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = 0.10 -> excess demand =   6.49638160\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_w = 1\n",
+    "grid_w = np.linspace(0.1,1.5,num_w)\n",
+    "grid_mkt_clearing = np.zeros(num_w)\n",
+    "\n",
+    "for i,p in enumerate(grid_w):\n",
+    "    grid_mkt_clearing[i] = equilibrium(p1,p2,w,par)[2]\n",
+    "    print(f'w = {w:.2f} -> excess demand = {grid_mkt_clearing[i]:12.8f}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
