Added explanations to problem 2

--- a/examproject/exam_2024 thje.ipynb
+++ b/examproject/exam_2024 thje.ipynb
@@ -359,6 +359,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problem:** Given graduate type, $i$ and a set of random draws, compute the optimal career path and the prior and realized utility\n",
+    "\n",
+    "**Inputs:** A $i \\times J$ array of random $N(0,\\sigma^2)$ draws.\n",
+    "\n",
+    "**Outputs:** A number.\n",
+    "\n",
+    "**Algorithm:** `find_max()`\n",
+    "    \n",
+    "  1. Set `maxL` to 0.\n",
+    "  2. For each `i` draw the random numbers and then for each `J` compute $\\tilde{u}_{i,j}$  it to `maxL`. If `x` is larger, set `maxL` to `x`.\n",
+    "  3. `maxL` is now set to the largest number in the list."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
