--- a/examproject/exam_2024.ipynb
+++ b/examproject/exam_2024.ipynb
@@ -287,8 +287,6 @@
     }
    ],
    "source": [
-    "# write your answer here\n",
-    "\n",
     "# Seed for reproducibility\n",
     "np.random.seed(2024)\n",
     "eps = np.random.normal(0,par.sigma,(par.J, par.K)) # Draw epsilons for each of the J carrer paths\n",
@@ -355,6 +353,18 @@
     "\\end{align*}\n",
     "$$\n",
     "For each graduate $i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description of method**: To solve the problem, we split the task into an inner loop and an outer loop. \n",
+    "\n",
+    "* Inner loop: for $k$ and for each $i$ we draw the $J \\times i$ utility shocks. We then for each $J$ compute $\\tilde{u}^k_{i,j}$. Then we choose the argmax to find $j_i^{k*}$. Given this argmax, we compute the prior and realized utility. This is done in the function `carrer_choice`.\n",
+    "* Outer loop: Loop over the inner loop for $K$ iterations. This is done in `carrer_choice_outer`.\n",
+    "\n",
+    "We then calculate the required statistics in `sum_stats`. `plot_p2` calls all of the other functions in order to plot the results."
    ]
   },
   {
@@ -428,6 +438,13 @@
    "metadata": {},
    "source": [
     "**Question 3:** Following the same approach as in question 2, find the new optimal career choice for each $i$, $k$. Then for each $i$, calculate the average subjective expected utility from their new optimal career choice, and the ex post realized utility of that career. Also, for each $i$, calculate the share of graduates that chooses to switch careers, conditional on which career they chose in the first year. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description**: To solve this problem, we augment our functions from before. In particular, we compute the initial optimal choice as we did before. Now we then add a loop, where we calculate the new priors $\\tilde{u}^{k,2}_{ij}$ by subtracting the switching cost, if you switch career, and then also update the prior for the current choice. Finally, we then compute the realized utility. All this is done in `carrer_choice_y2`. "
    ]
   },
   {
