Small changes to Q2 in P1

--- a/examproject/exam_2024 msl.ipynb
+++ b/examproject/exam_2024 msl.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [
     {
@@ -415,25 +415,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w = 0.10 -> excess demand =   6.49638160\n"
+      "p1 = 0.10 -> excess demand =  -6.01167156\n",
+      "p1 = 0.31 -> excess demand =  -1.28644016\n",
+      "p1 = 0.52 -> excess demand =  -0.40203269\n",
+      "p1 = 0.73 -> excess demand =  -0.04196236\n",
+      "p1 = 0.94 -> excess demand =   0.14474541\n",
+      "p1 = 1.16 -> excess demand =   0.25246551\n",
+      "p1 = 1.37 -> excess demand =   0.31721304\n",
+      "p1 = 1.58 -> excess demand =   0.35572340\n",
+      "p1 = 1.79 -> excess demand =   0.37686022\n",
+      "p1 = 2.00 -> excess demand =   0.38579288\n"
      ]
     }
    ],
    "source": [
-    "num_w = 1\n",
-    "grid_w = np.linspace(0.1,1.5,num_w)\n",
+    "num_w = 10\n",
+    "grid_w = np.linspace(0.1,2.0,num_w)\n",
     "grid_mkt_clearing = np.zeros(num_w)\n",
     "\n",
-    "for i,p in enumerate(grid_w):\n",
+    "for i,p1 in enumerate(grid_w):\n",
     "    grid_mkt_clearing[i] = equilibrium(p1,p2,w,par)[2]\n",
-    "    print(f'w = {w:.2f} -> excess demand = {grid_mkt_clearing[i]:12.8f}')"
+    "    print(f'p1 = {p1:.2f} -> excess demand = {grid_mkt_clearing[i]:12.8f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "equilibrium price must be in [0.73,0.94]\n"
+     ]
+    }
+   ],
+   "source": [
+    "left = np.max(grid_w[grid_mkt_clearing < 0])\n",
+    "right = np.min(grid_w[grid_mkt_clearing > 0])\n",
+    "print(f'equilibrium price must be in [{left:.2f},{right:.2f}]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 537,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p2 = 0.10 -> excess demand =  -0.56420710\n",
+      "p2 = 0.31 -> excess demand =  -0.45865147\n",
+      "p2 = 0.52 -> excess demand =  -0.35309441\n",
+      "p2 = 0.73 -> excess demand =  -0.24754032\n",
+      "p2 = 0.94 -> excess demand =  -0.14198459\n",
+      "p2 = 1.16 -> excess demand =  -0.03643198\n",
+      "p2 = 1.37 -> excess demand =   0.06912628\n",
+      "p2 = 1.58 -> excess demand =   0.17467669\n",
+      "p2 = 1.79 -> excess demand =   0.28023555\n",
+      "p2 = 2.00 -> excess demand =   0.38579288\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_w_1 = 10\n",
+    "grid_w_1 = np.linspace(0.1,2.0,num_w_1)\n",
+    "grid_mkt_clearing_1 = np.zeros(num_w_1)\n",
+    "\n",
+    "for i,p2 in enumerate(grid_w_1):\n",
+    "    grid_mkt_clearing_1[i] = equilibrium(p1,p2,w,par)[2]\n",
+    "    print(f'p2 = {p2:.2f} -> excess demand = {grid_mkt_clearing_1[i]:12.8f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 538,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "equilibrium price must be in [1.16,1.37]\n"
+     ]
+    }
+   ],
+   "source": [
+    "left = np.max(grid_w[grid_mkt_clearing_1 < 0])\n",
+    "right = np.min(grid_w[grid_mkt_clearing_1 > 0])\n",
+    "print(f'equilibrium price must be in [{left:.2f},{right:.2f}]')"
    ]
   },
   {
@@ -464,6 +543,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 539,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 540,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [],
    "source": [
